# pwr-virtual-sensor

./: .gitignore  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.gpu  alembic.ini  docker-entrypoint-gpu.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240101_0001_initial_schema.py  20240101_0002_virtual_sensor_telemetry.py  20240101_0003_run_device_timing.py
backend/app/: main.py
backend/app/api/: runs.py  sensor.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  run.py  telemetry.py
backend/app/physics/: __init__.py  assimilation.py  base.py  constants.py  scipy_solver.py  tensor_solver.py
backend/app/schemas/: __init__.py  runs.py  sensor.py
backend/app/worker/: celery_app.py  tasks.py
backend/libs/: librocdxg.so.1  librocdxg.so.1.1.0
backend/tests/: test_physics.py
docs/: model_assumptions.md  overhead_analysis.md  posterior_validation.md  virtual_sensor_architecture.md  wsl2_rocm_dxg_bridge.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  runs.ts  sensor.ts
frontend/src/components/: SimulationForm.tsx  StatusBadge.tsx  TelemetryChart.tsx  VirtualSensorChart.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: de.ts  en.ts  es.ts  fr.ts  ru.ts  zh.ts
frontend/src/pages/: Dashboard.tsx  VirtualSensorDashboard.tsx
frontend/src/types/: index.ts
